<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentScreen.miniFrag.fragment_mini_settings_editprofile">

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:scrollbars="none">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView android:ellipsize="end"
        android:id="@+id/txtMainHeadline"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_32pxh"
        android:layout_marginStart="@dimen/_32pxh"
        android:layout_marginTop="@dimen/_26pxv"
        android:layout_width="wrap_content"
        android:singleLine="true"
        android:text="@string/lbl_edit_profile2"
        style="@style/txtMerriweatherSansromanregular37" tools:text="@string/lbl_edit_profile2"/>
    <ImageView android:id="@+id/imageRectangleThirtySix"
        android:layout_gravity="center_horizontal"
        android:layout_height="@dimen/_93pxh"
        android:layout_marginEnd="@dimen/_32pxh"
        android:layout_marginStart="@dimen/_32pxh"
        android:layout_marginTop="@dimen/_18pxv"
        android:layout_width="@dimen/_97pxh"
        android:scaleType="fitXY"
        android:src="@drawable/img_rectangle36"
        tools:ignore="ContentDescription"
        tools:src="@drawable/img_rectangle36"/>
    <TextView android:ellipsize="end" android:id="@+id/txtSEND"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_32pxh"
        android:layout_marginStart="@dimen/_32pxh"
        android:layout_marginTop="@dimen/_19pxv"
        android:layout_width="wrap_content"
        android:singleLine="true"
        android:text="@string/msg_change_profile"
        style="@style/txtInterregular18" tools:text="@string/msg_change_profile"/>
    <TextView android:ellipsize="end" android:id="@+id/txtName"
        android:layout_gravity="start"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_40pxh"
        android:layout_marginStart="@dimen/_40pxh"
        android:layout_marginTop="@dimen/_39pxv"
        android:layout_width="wrap_content"
        android:singleLine="true" android:text="@string/lbl_name"
        style="@style/txtInterregular12" tools:text="@string/lbl_name"/>
    <LinearLayout android:id="@+id/linearRowyuvrajsingh"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_32pxh"
        android:layout_marginStart="@dimen/_32pxh"
        android:layout_marginTop="@dimen/_7pxv"
        android:layout_width="match_parent"
        android:orientation="horizontal" style="@style/groupStylegray_101cornerRadius">
        <TextView android:ellipsize="end"
            android:id="@+id/txtYuvrajSingh"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_17pxv"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_weight="0.86" android:layout_width="0dp"
            android:singleLine="true"
            android:text="@string/lbl_yuvraj_singh"
            style="@style/txtIntermedium14" tools:text="@string/lbl_yuvraj_singh"/>
        <View android:background="@color/bluegray_900"
            android:id="@+id/viewRectangleSixtyFive"
            android:layout_height="@dimen/_14pxh"
            android:layout_marginBottom="@dimen/_19pxv"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginStart="@dimen/_204pxh"
            android:layout_marginTop="@dimen/_20pxv" android:layout_width="@dimen/_14pxh"/>
    </LinearLayout>
    <TextView android:ellipsize="end" android:id="@+id/txtLocation"
        android:layout_gravity="start"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_40pxh"
        android:layout_marginStart="@dimen/_40pxh"
        android:layout_marginTop="@dimen/_12pxv"
        android:layout_width="wrap_content"
        android:singleLine="true"
        android:text="@string/lbl_location"
        style="@style/txtInterregular12" tools:text="@string/lbl_location"/>
    <LinearLayout android:id="@+id/linearRowcountry"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_32pxh"
        android:layout_marginStart="@dimen/_32pxh"
        android:layout_marginTop="@dimen/_7pxv"
        android:layout_width="match_parent"
        android:orientation="horizontal" style="@style/groupStylegray_101cornerRadius">
        <TextView android:ellipsize="end"
            android:id="@+id/txtCountry"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_19pxv"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_weight="0.7" android:layout_width="0dp"
            android:singleLine="true"
            android:text="@string/lbl_india"
            style="@style/txtIntermedium14" tools:text="@string/lbl_india"/>
        <View android:background="@color/bluegray_900"
            android:id="@+id/viewRectangleSixtyFiveOne"
            android:layout_height="@dimen/_14pxh"
            android:layout_marginBottom="@dimen/_19pxv"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginStart="@dimen/_255pxh"
            android:layout_marginTop="@dimen/_20pxv" android:layout_width="@dimen/_14pxh"/>
    </LinearLayout>
    <TextView android:ellipsize="end" android:id="@+id/txtAddress"
        android:layout_gravity="start"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_40pxh"
        android:layout_marginStart="@dimen/_40pxh"
        android:layout_marginTop="@dimen/_12pxv"
        android:layout_width="wrap_content"
        android:singleLine="true" android:text="@string/lbl_address"
        style="@style/txtInterregular12" tools:text="@string/lbl_address"/>
    <LinearLayout android:id="@+id/linearRowtimezone"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_32pxh"
        android:layout_marginStart="@dimen/_32pxh"
        android:layout_marginTop="@dimen/_7pxv"
        android:layout_width="match_parent"
        android:orientation="horizontal" style="@style/groupStylegray_101cornerRadius">
        <TextView android:ellipsize="end"
            android:id="@+id/txtTimeZone"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_18pxv"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_marginTop="@dimen/_18pxv"
            android:layout_weight="0.84" android:layout_width="0dp"
            android:singleLine="true"
            android:text="@string/lbl_malaf_west"
            style="@style/txtIntermedium14" tools:text="@string/lbl_malaf_west"/>
        <View android:background="@color/bluegray_900"
            android:id="@+id/viewRectangleSixtyFiveTwo"
            android:layout_height="@dimen/_14pxh"
            android:layout_marginBottom="@dimen/_19pxv"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginStart="@dimen/_213pxh"
            android:layout_marginTop="@dimen/_20pxv" android:layout_width="@dimen/_14pxh"/>
    </LinearLayout>
    <TextView android:ellipsize="end"
        android:id="@+id/txtPhoneNumber"
        android:layout_gravity="start"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_40pxh"
        android:layout_marginStart="@dimen/_40pxh"
        android:layout_marginTop="@dimen/_12pxv"
        android:layout_width="wrap_content"
        android:singleLine="true"
        android:text="@string/lbl_phone_number"
        style="@style/txtInterregular12" tools:text="@string/lbl_phone_number"/>
    <LinearLayout android:id="@+id/linearRow9820345922"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_32pxh"
        android:layout_marginStart="@dimen/_32pxh"
        android:layout_marginTop="@dimen/_7pxv"
        android:layout_width="match_parent"
        android:orientation="horizontal" style="@style/groupStylegray_101cornerRadius">
        <TextView android:ellipsize="end"
            android:id="@+id/txt9820345922"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_19pxv"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_weight="0.88" android:layout_width="0dp"
            android:singleLine="true"
            android:text="@string/lbl_9820345922"
            style="@style/txtIntermedium14" tools:text="@string/lbl_9820345922"/>
        <View android:background="@color/bluegray_900"
            android:id="@+id/viewRectangleSixtyFiveThree"
            android:layout_height="@dimen/_14pxh"
            android:layout_marginBottom="@dimen/_19pxv"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginStart="@dimen/_190pxh"
            android:layout_marginTop="@dimen/_20pxv" android:layout_width="@dimen/_14pxh"/>
    </LinearLayout>
    <FrameLayout android:id="@+id/frameBTNLarge"
        android:layout_gravity="center_horizontal"
        android:layout_height="@dimen/_76pxv"
        android:layout_marginEnd="@dimen/_32pxh"
        android:layout_marginStart="@dimen/_32pxh"
        android:layout_marginTop="@dimen/_18pxv"
        android:layout_width="@dimen/_332pxh" style="@style/groupStylecornerRadius_1">
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSaveChanges"
            android:layout_gravity="top|start"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_17pxv"
            android:singleLine="true"
            android:text="@string/lbl_save_changes"
            android:textAllCaps="false"
            style="@style/btnSolidRounded_1" tools:text="@string/lbl_save_changes"/>
    </FrameLayout>
</LinearLayout>
</ScrollView>
</FrameLayout>